2004-09-10  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/subdaemons.c:
	    Changed the client input pickup methodology back into
	    "prefer lowest slot" (instead of round-robin).
	    It just didn't work :-(  (probably broken logic
	    somewhere in there..)

	* smtpserver/smtpchild.c:
	    Account childs by type, not all together..  (oops..)

2004-09-09  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/subdaemon-rtr.c:
	    Changed subprocess instance abstraction details
	    so, that there are no absolutely fixed array sizes.

	* smtpserver/subdaemons.c:
	    Changed processed client input pickup methodology into
	    "process in round-robin manner" (as opposed to "lowest
	    slot first -- which can be seriously pessimal approach.

2004-09-07  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/mxverify.c:
	    Source DNS verification went into woods a bit...
	    If the intention is to accept the MAIL FROM, if
	    it has just any DNS data, do so.

2004-09-06  Matti Aarnio  <mea@zmailer.org>

	* include/mailer.h, include/libz.h, lib/rfc822scan.c,
	  router/functions.c, router/prototypes.h, router/rfc822.c,
	  router/rfc822hdrs.c, router/shliaise.c:
	    Removed all vestiges of detecting '#' at the lead of
	    the address lines, and considering it as an indication
	    of a comment.  Doing that comment-skipping in callers,
	    where appropriate at all.

	* scheduler/mq2.c, scheduler/mailq.inc:
	    Added (into the scheduler's "MAILQ -QQQQ" processing)
	    a way to call external arbitrary command, whose output
	    is collected into the command output.  This allows
	    "easy" addition of custom system monitoring data
	    into the output.  Something will get added into "contrib".

2004-09-05  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/policytest.c:
	    Realized that under some conditions it is possible to
	    spin in place of the automagic "this rcpt domain is
	    my local".

2004-09-03  Matti Aarnio  <mea@zmailer.org>
